objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivityType__c</fullName>
        <description>SFDC1-6039: To track time for non BAU work
SFDC1-7727: Adding new picklist values</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal Meeting</fullName>
                </value>
                <value>
                    <fullName>In person meeting</fullName>
                </value>
                <value>
                    <fullName>Online customer meeting</fullName>
                </value>
                <value>
                    <fullName>Proposal Accepted meeting</fullName>
                </value>
                <value>
                    <fullName>Proposal Delivery meeting</fullName>
                </value>
                <value>
                    <fullName>Project Work</fullName>
                </value>
                <value>
                    <fullName>Triage</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Mentoring</fullName>
                </value>
                <value>
                    <fullName>Client Visit</fullName>
                </value>
                <value>
                    <fullName>Management Tasks</fullName>
                </value>
                <value>
                    <fullName>Report Generation</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Internal Training</fullName>
                </value>
                <value>
                    <fullName>Meetings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssociatedTo__c</fullName>
        <description>US-5101086 : add associatedTo in activity object.</description>
        <label>Associated To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AssociatedTo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attributed_sequence_name__c</fullName>
        <description>US-5102665: New Outreach activity fields (task &amp; events)</description>
        <label>Attributed sequence name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US-5102665: indicates that the email has bounced.</description>
        <label>Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bounced_at__c</fullName>
        <description>US-5102665:indicates when the email bounced.</description>
        <label>Bounced At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6039: To track time for non BAU work</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clicked_At__c</fullName>
        <description>US-5102665:indicates when the email was last clicked on.</description>
        <label>Clicked At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Clicked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US-5102665: indicates that the email was clicked on by the recipient.</description>
        <label>Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommentsPreview__c</fullName>
        <description>SFDC-3979: Notes / Comments Added Checkbox on Tasks</description>
        <label>Comments Preview</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country/Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsChild__c</fullName>
        <description>SFDC-3003 A custom formula field for reporting to represent if an Event is a child event. Standard IsChild field on event is not available on reports.</description>
        <formula>IsChild</formula>
        <label>Is Child</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-5196 Lead field on Task to track the Lead from which it is being converted</description>
        <inlineHelpText>Lookup for Lead, for the Task which is converted from Lead</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7046: related to Legacy ID and Legacy system, this field is a concatenation of those two fields to create a unique legacy UD that can be used as an external key for updates by the migration team, will not be visible to sales profiles to avoid confusion with related legacy ids object.
This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field store the concatenation of the source system name and a source system record id to ensure the record is uniquely identified.</inlineHelpText>
        <label>LegacyIDUnique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Legacy field created as part of migration exercise to hold legacy Id</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier from legacy System</inlineHelpText>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacyReference__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Legacy Reference field is a friendly system reference to the source record.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a friendly system reference to the source record.</inlineHelpText>
        <label>LegacyReference</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>related to Legacy ID, this field identifies the legacy system from which the legacy ID is from, will not be visible to Sales profiles to avoid confusion with related legacy ids object</description>
        <inlineHelpText>Name of the CRM system the source record came from</inlineHelpText>
        <label>LegacySystem</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marked_as_Spam__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US-5102665 : indicates that the recipient has marked the email as spam.</description>
        <label>Marked as Spam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marked_as_Spam_at__c</fullName>
        <description>US-5102665: indicates when the recipient has marked the email as spam.</description>
        <label>Marked as Spam At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MeetingNote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event Wrapper</label>
        <referenceTo>MeetingNote__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NotesCompleted__c</fullName>
        <description>SFDC-2752 If meeting outcome is populated on related meeting note, mark Notes Completed on event as true.</description>
        <formula>MeetingNote__r.NotesCompleted__c ||  IF(ISBLANK(CommentsPreview__c),False,True)</formula>
        <label>Notes Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opened_At__c</fullName>
        <description>US-5102665: indicates when the email was last opened.</description>
        <label>Opened At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Opened__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US-5102665: indicates that the email was opened by the recipient.</description>
        <label>Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PKIDActivity__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Aty{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID Activity</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <description>SFDC-3331 field to hold the id for the event so that it will get copied over to child events to establish a link</description>
        <inlineHelpText>Auto populated via workflow</inlineHelpText>
        <label>ParentId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrivacyLevel__c</fullName>
        <description>SFDC-2865 Represent if an event is customer facing, internal or private based on AccountId.</description>
        <label>Privacy Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal appointment</fullName>
                </value>
                <value>
                    <fullName>Internal meeting</fullName>
                </value>
                <value>
                    <fullName>Customer-facing meeting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductFamilyLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-3843 : This field will hold the values from the Product Family field</description>
        <inlineHelpText>Please Enter the Product Family</inlineHelpText>
        <label>Product Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-3100: Activity Product Tagging</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Replied_At__c</fullName>
        <description>US-5102665: indicates when the email was replied on.</description>
        <label>Replied At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Replied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US-5102665 : indicates that the email was replied to by the recipient.</description>
        <label>Replied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reply_Sentiment__c</fullName>
        <description>US-5102665: indicates the sentiment(attitude of the prospect replying) outreach.io assigned to this email.</description>
        <label>Reply Sentiment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sequence_Name__c</fullName>
        <description>US-5102665 : indicates the outreach.io sequence name to which the task is scheduled under.</description>
        <label>Sequence Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SourceGlobalAction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-3012 Captures if an event was created using New Event global action.</description>
        <label>Source Global Action?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <label>State Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubType__c</fullName>
        <description>SFDC-4107 Subtype field for Activity object</description>
        <label>Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer Call</fullName>
                </value>
                <value>
                    <fullName>Internal Call</fullName>
                </value>
                <value>
                    <fullName>New Business Proposal</fullName>
                </value>
                <value>
                    <fullName>Proposal Acceptance Call</fullName>
                </value>
                <value>
                    <fullName>Proposal Delivery Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Synergy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC-204: Add &quot;Synergy&quot; Check Box field on Activity (Task and Event)</description>
        <inlineHelpText>Check box if Activity is related to Synergy.</inlineHelpText>
        <label>Synergy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TaskToRevisitOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-9500 This checkbox will be checked if task is created via &apos;Revisit Opportunity&apos; button</description>
        <inlineHelpText>Task To Revisit Opportunity</inlineHelpText>
        <label>Task To Revisit Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeSpentMinutes__c</fullName>
        <description>SFDC1-6039:This field  track time related non-BAU work</description>
        <label>Time Spent(Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unsubscribed_At__c</fullName>
        <description>US-5102665 : indicates when the email recipient has unsubscribed from further communications.</description>
        <label>Unsubscribed At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Unsubscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>US-5102665:indicates that the recipient has unsubscribed from further communications.</description>
        <label>Unsubscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZipPostalCode__c</fullName>
        <label>Zip Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>